Adding in the Core files

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -2,3 +2,31 @@
 //  ALLOY - HELLO!!!
 //  File: assets/less/main.less
 */
+
+
+// Start your engines!
+@import "variables.less";
+@import "mixins/alloy-mixins.less"
+
+// Reset ALL the things
+@import "alloy/alloy-helpers.less";
+
+// Alloy Core
+@import "alloy/alloy-base.less";
+@import "alloy/alloy-typography.less";
+@import "alloy/alloy-grid.less";
+@import "alloy/alloy-tables.less";
+@import "alloy/alloy-forms.less";
+@import "alloy/alloy-buttons.less";
+@import "alloy/alloy-box.less";
+@import "alloy/alloy-media.less";
+
+// Patterns
+
+// Modules
+
+// Helpers
+@import "alloy/alloy-helpers.less";
+
+// Debuger
+@import "alloy/alloy-debug.less";
