Added some blank files and updated bower.json

--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -42,13 +42,13 @@
 // BASE
 // --------------------------------------------------
 
-@BASE-COLOR-Background: @COLOR-Gray-Lightest;
+@BASE-COLOR-Background: 		@COLOR-Gray-Lightest;
 
-@LINK-COLOR-Link: 
-@LINK-COLOR-Visited:
-@LINK-COLOR-Hover:
-@LINK-COLOR-Focus:
-@LINK-COLOR-Active:
+@LINK-COLOR-Link: 				#1e0fbe;
+@LINK-COLOR-Visited:			#609;
+@LINK-COLOR-Hover:				@LINK-COLOR-Link;
+@LINK-COLOR-Focus:				@LINK-COLOR-Link;
+@LINK-COLOR-Active:				@LINK-COLOR-Link;
 
 
 // TYPEOGRAPHY
