Added some more simple content
This is to make sure that the theory behind what I want to do will hold
up

--- a/assets/less/alloy/alloy-helpers.less
+++ b/assets/less/alloy/alloy-helpers.less
@@ -1,4 +1,14 @@
+.alloy-helpers() when not (@ALLOY-Helpers) { }
+.alloy-helpers() when (@ALLOY-Helpers) {
+
 /*
 //  ALLOY - HELPERS
 //  File: assets/less/alloy/alloy-helpers.less
 */
+
+
+
+
+
+
+} .alloy-helpers();
