Spelling mistakes ammended

--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -61,6 +61,7 @@
 @TYPE-FontFamily-monospace:     Monaco, Consolas, "Courier New", monospace;
 
 @TYPE-FontFamily:				@TYPE-FontFamily-sans-serif;
+@TYPE-CodeFontFamily:			@TYPE-FontFamily-monospace;
 @TYPE-FontFamily-Heading:       @TYPE-FontFamily-serif;
 
 @TYPE-COLOR-Body:               @COLOR-Gray-Darkest;
