Grids and Debugs

--- a/assets/less/alloy/alloy-helpers.less
+++ b/assets/less/alloy/alloy-helpers.less
@@ -116,7 +116,7 @@
 
 // Mobile
 
-@media only screen and (max-width: @MQ-Mobile) { 
+@media only screen and (max-width: @MQ-Smaller) { 
 
     .show-mobile {
         display: inherit !important; 
@@ -132,7 +132,7 @@
 
 // Tablet
 
-@media only screen and (min-width: @MQ-XS-Max) and (max-width: @MQ-SM) {
+@media only screen and (min-width: @MQ-XS-Medium-Min) and (max-width: @MQ-Medium) {
     
     .show-tablet,
     .hide-desktop {
