--- a/assets/less/alloy/alloy-grid.less
+++ b/assets/less/alloy/alloy-grid.less
@@ -2,3 +2,218 @@
 //  ALLOY - GRID
 //  File: assets/less/alloy/alloy-grid.less
 */
+
+// .row = row
+// .col = column
+// .wrap = wrap
+
+
+// BASE
+// ----------------------------------------------------
+
+[class*="col-"] {
+    width: 100%;
+    display: inline;
+    float: left; 
+    .gutterPadding();
+} 
+
+.col-padding-none {
+	padding:0;
+}
+
+.col-no-padding-vert {
+	.colPaddingVert();
+}
+
+.col-no-padding-hori {
+	.colPaddingHori();
+}
+
+.grid-rtl [class*="col-"] {
+    float:right;
+}
+
+// FULL
+.col-1 {
+    .colwidth(1,1);
+}
+
+.wrap {
+    margin: 0 auto;
+    width: 100%;
+}
+
+.grid {
+    margin: 0 auto;
+    position: relative;
+    .clearfix();
+}
+
+.grid-example [class*="col-"] div {
+    background-color: #ff00ff;
+    color: #ffffff;
+    text-align:center;
+    font-weight: bold;
+}
+
+ 
+// EXTRA SMALL GRID (MOBILE)
+// ----------------------------------------------------
+
+@media only screen and (max-width: @MQ-Small)  { 
+
+    .col-xs-1-2 { .colwidth(1,2); } 
+    .col-xs-1-3 { .colwidth(1,3); }
+    .col-xs-2-3 { .colwidth(2,3); }
+
+}
+
+// SMALL GRID (TABLET)
+// ----------------------------------------------------
+
+@media only screen and (min-width: @MQ-Small) and (max-width: @MQ-Medium)  {
+
+    .col-sm-1-2, .col-sm-2-4, .col-sm-3-6 { .colwidth(1,2); } 
+    .col-sm-1-3, .col-sm-2-6 { .colwidth(1,3); }
+    .col-sm-2-3, .col-sm-4-6 { .colwidth(2,3); }
+    .col-sm-1-4 { .colwidth(1,4); }
+    .col-sm-3-4 { .colwidth(3,4); }
+    .col-sm-1-5 { .colwidth(1,5); }
+    .col-sm-2-5 { .colwidth(2,5); }
+    .col-sm-3-5 { .colwidth(3,5); }
+    .col-sm-4-5 { .colwidth(4,5); }
+    .col-sm-1-6 { .colwidth(1,6); }
+    .col-sm-5-6 { .colwidth(5,6); }
+
+}
+
+
+// MEDIUM GRID (DESKTOP)
+// ----------------------------------------------------
+
+@media only screen and (min-width: @MQ-Medium) {
+
+    .row {
+        //max-width: (@GRID-MaxWidth/@TYPE-FontSize) * 1em; // Make ems
+        padding: 0 10%;
+        margin: 0 auto;
+    }
+
+// COLUMNS
+
+    // Halves
+    .col-md-1-2, .col-md-2-4, .col-md-3-6, .col-md-4-8, .col-md-5-10, .col-md-6-12, .col-md-7-14, .col-md-8-16 { .colwidth(1,2); }
+
+    // Thirds
+    .col-md-1-3, .col-md-2-6, .col-md-3-9, .col-md-4-12, .col-md-5-15 { .colwidth(1,3); }
+    .col-md-2-3, .col-md-4-6, .col-md-6-9, .col-md-9-12, .col-md-10-15 { .colwidth(2,3); }
+
+    // Quarters
+    .col-md-1-4, .col-md-2-8, .col-md-3-12, .col-md-4-16 { .colwidth(1,4); }
+    .col-md-3-4, .col-md-6-8, .col-md-9-12, .col-md-8-16 { .colwidth(3,4); }
+
+    // Fifths
+    .col-md-1-5, .col-md-2-10, .col-md-3-15 { .colwidth(1,5); }
+    .col-md-2-5, .col-md-4-10, .col-md-6-15 { .colwidth(2,5); }
+    .col-md-3-5, .col-md-6-10, .col-md-9-15 { .colwidth(3,5); }
+    .col-md-4-5, .col-md-8-10, .col-md-12-15 { .colwidth(4,5); }
+
+    // Sixths 
+    .col-md-1-6, .col-md-2-12 {.colwidth(1,6);}
+    .col-md-5-6, .col-md-10-12 {.colwidth(5,6);}
+
+    // Sevenths
+    .col-md-1-7, .col-md-2-14 {.colwidth(1,7);}
+    .col-md-2-7, .col-md-4-14 {.colwidth(2,7);}
+    .col-md-3-7, .col-md-6-14 {.colwidth(3,7);}
+    .col-md-4-7, .col-md-8-14 {.colwidth(4,7);}
+    .col-md-5-7, .col-md-10-14 {.colwidth(5,7);}
+    .col-md-6-7, .col-md-12-14 {.colwidth(6,7);}
+
+    // Eighths  
+    .col-md-1-8, .col-md-2-16 {.colwidth(1,8);}
+    .col-md-3-8, .col-md-4-16 {.colwidth(3,8);}
+    .col-md-5-8, .col-md-10-16 {.colwidth(5,8);}
+    .col-md-7-8, .col-md-14-16 {.colwidth(7,8);}
+
+    // Nineths
+    .col-md-1-9 {.colwidth(1,9);}
+    .col-md-2-9 {.colwidth(2,9);}
+    .col-md-4-9 {.colwidth(4,9);}
+    .col-md-5-9 {.colwidth(5,9);}
+    .col-md-7-9 {.colwidth(7,9);}
+    .col-md-8-9 {.colwidth(8,9);}
+
+    // Tenths
+    .col-md-1-10 { .colwidth(1,10); }
+    .col-md-3-10 { .colwidth(3,10); }
+    .col-md-7-10 { .colwidth(7,10); }
+    .col-md-9-10 { .colwidth(9,10); }
+
+    // Elveenths
+    .col-md-1-11 { .colwidth(1,11); }
+    .col-md-2-11 { .colwidth(2,11); }
+    .col-md-3-11 { .colwidth(3,11); }
+    .col-md-4-11 { .colwidth(4,11); }
+    .col-md-5-11 { .colwidth(5,11); }
+    .col-md-6-11 { .colwidth(6,11); }
+    .col-md-7-11 { .colwidth(7,11); }
+    .col-md-8-11 { .colwidth(8,11); }
+    .col-md-9-11 { .colwidth(9,11); }
+    .col-md-10-11 { .colwidth(10,11); }
+
+    // Twelths
+
+    .col-md-1-12 {.colwidth(1,12);}
+    .col-md-5-12 {.colwidth(5,12);}
+    .col-md-7-12 {.colwidth(7,12);} 
+    .col-md-11-12 {.colwidth(11,12);} 
+
+    // Thirteenths
+
+    .col-md-1-13 {.colwidth(1,13);}
+    .col-md-2-13 {.colwidth(2,13);}
+    .col-md-3-13 {.colwidth(3,13);}
+    .col-md-4-13 {.colwidth(4,13);}
+    .col-md-5-13 {.colwidth(5,13);}
+    .col-md-7-13 {.colwidth(7,13);}
+    .col-md-8-13 {.colwidth(8,13);}
+    .col-md-9-13 {.colwidth(9,13);}
+    .col-md-10-13 {.colwidth(10,13);}
+    .col-md-11-13 {.colwidth(11,13);}
+    .col-md-12-13 {.colwidth(12,13);}
+
+    // Fourteenths
+
+    .col-md-1-14 {.colwidth(1,14);}
+    .col-md-3-14 {.colwidth(3,14);}
+    .col-md-5-14 {.colwidth(5,14);}
+    .col-md-7-14 {.colwidth(7,14);}
+    .col-md-9-14 {.colwidth(9,14);}
+    .col-md-11-14 {.colwidth(11,14);}
+    .col-md-13-14 {.colwidth(13,14);}
+
+    // Fifthteenths
+
+    .col-md-1-15 {.colwidth(1,15);}
+    .col-md-2-15 {.colwidth(2,15);}
+    .col-md-4-15 {.colwidth(4,15);}
+    .col-md-7-15 {.colwidth(7,15);}
+    .col-md-8-15 {.colwidth(8,15);}
+    .col-md-11-15 {.colwidth(11,15);}
+    .col-md-13-15 {.colwidth(11,15);}
+    .col-md-14-15 {.colwidth(14,15);}
+
+    // Sixteenths
+
+    .col-md-1-16 {.colwidth(1,16);}
+    .col-md-3-16 {.colwidth(3,16);}
+    .col-md-5-16 {.colwidth(5,16);}
+    .col-md-7-16 {.colwidth(7,16);}
+    .col-md-9-16 {.colwidth(9,16);}
+    .col-md-11-16 {.colwidth(11,16);}
+    .col-md-13-16 {.colwidth(13,16);}
+    .col-md-15-16 {.colwidth(15,16);}
+
+}
