Added Panel Type and fixed some typos

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -13,6 +13,7 @@
 @import "base_modules/accordion.less";
 @import "base_modules/button.less";
 @import "base_modules/modal.less";
+@import "base_modules/panel.less";
 @import "base_modules/table.less";
 @import "base_modules/rte.less";
 
