--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -159,6 +159,7 @@
 @MODULE-Typography:             true;
 @MODULE-Well:                   true;
 @MODULE-RTE:					true;
+@MODULE-Panel:					true;
 
 // MODULES
 // =========================================================================//
