--- a/content/Components/panels.hbs
+++ b/content/Components/panels.hbs
@@ -28,7 +28,7 @@ nav-variant: "panels"
 
 		            <div class="secton__body">
 				        <!-- code -->
-
+				        {{>panel panel}}
 				        <!-- end of code -->
 			        </div>
 
