--- a/content/_partials/panel.hbs
+++ b/content/_partials/panel.hbs
@@ -1,12 +1,19 @@
 {{#this}}
 <div class="panel{{#if item.modifier}} panel--{{item.modifier}}{{/if}}">
 	<div class="panel__title">{{content.title}}</div>
-	<div class="panel__body"><p>{{content.body}}</p></div>
+	<div class="panel__body rte">{{{content.body}}}</div>
 	{{#if actions}}
-	<div class="panel__actions">
-	{{#each actions.button}}
-		{{>button this}}
-	{{/each}}
+		<div class="panel__actions">
+			{{#each actions}}
+				{{#if buttons}}
+					{{#each buttons}}
+						{{#this}}
+						{{> button }}
+						{{/this}}
+					{{/each }}
+				{{/if}}
+			{{/each }}
+		</div>
 	{{/if}}
 </div>
 {{/this}}
