Started creating a card element

--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -143,6 +143,7 @@
 @MODULE-Breadcrumbs:            true;
 @MODULE-Browsehappy:            true;
 @MODULE-Button:                 true;
+@MODULE-Card:                   true;
 @MODULE-Column:                 true;
 @MODULE-Form:                   true;
 @MODULE-Icon:                   true;
