--- a/content/Components/card.hbs
+++ b/content/Components/card.hbs
@@ -27,7 +27,7 @@ nav-variant: "card"
 
 		            <div class="secton__body">
 				        <!-- code -->
-	        				{{> card card_simple--test }}
+	        				{{> card card }}
 				        <!-- end of code -->
 			        </div>
 
