Introduction of the story module

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -12,10 +12,11 @@
 
 @import "base_modules/accordion.less";
 @import "base_modules/button.less";
-@import "base_modules/card.less";
+@import "base_modules/ca.less";
 @import "base_modules/modal.less";
 @import "base_modules/panel.less";
 @import "base_modules/table.less";
+@import "base_modules/story.less";
 @import "base_modules/rte.less";
 
 // MODULES
