--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -158,6 +158,7 @@
 @MODULE-Tabs:                   false;
 @MODULE-Tooltip:                true;
 @MODULE-Typography:             true;
+@MODULE-Story:             true;
 @MODULE-Well:                   true;
 @MODULE-RTE:					true;
 @MODULE-Panel:					true;
