--- a/content/_partials/card.hbs
+++ b/content/_partials/card.hbs
@@ -27,7 +27,7 @@
 	<div class="card__back">
 		<div class="card__content">
 			<div class="card__title">{{content.title}}</div>
-			<div class="card__body">{{{content.summary-extended}}}</div>
+			<div class="card__body">{{{content.body}}}</div>
 		</div>
 	</div>
 </div>
