--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -12,7 +12,7 @@
 
 @import "base_modules/accordion.less";
 @import "base_modules/button.less";
-@import "base_modules/ca.less";
+@import "base_modules/card.less";
 @import "base_modules/modal.less";
 @import "base_modules/panel.less";
 @import "base_modules/table.less";
