--- a/content/_partials/story.hbs
+++ b/content/_partials/story.hbs
@@ -1,12 +1,22 @@
 {{#this}}
 <div class="story{{#if item.modifier}} story--{{item.modifier}}{{/if}}">
 <div class="story__tools"></div>
-	<div class="story__ident">
-		{{> story-ident }}
-	</div>
+	{{#if content.ident}}
+		{{#each content.ident}}
+			{{#this}}
+			{{> story-ident }}
+			{{/this}}
+		{{/each }}
+	{{/if}}
 	<div class="story__content">
 		<div class="story__body">{{{content.body}}}</div>
-		<div class="story__cite">{{> story-cite }}</div>
+		{{#if content.cite}}
+			{{#each content.cite}}
+				{{#this}}
+				{{> story-cite }}
+				{{/this}}
+			{{/each }}
+		{{/if}}
 		{{#if actions}}
 			<div class="story__actions">
 			{{#each actions}}
