Added placeholder for hovercard

--- a/content/_partials/story-ident.hbs
+++ b/content/_partials/story-ident.hbs
@@ -4,7 +4,8 @@
 	<img src="{{content.avatar}}" class="story-ident__avatar" alt="" />
 </a>
 <div class="story-ident__info">
-	<a href="">{{content.name}}</a> [ACTION] [CITATIONAUTHOR]
+	<a href="#">{{content.name}}</a> [ACTION] [CITATIONAUTHOR]
+	<time datetime="YYYY-MM-DDThh:mm:ssTZD" class="story-ident__when">[YYYY-MM-DDThh:mm:ssTZD]</time>
 </div>
 </div>
 {{/this}}
