--- a/assets/less/base_modules/story.less
+++ b/assets/less/base_modules/story.less
@@ -18,7 +18,9 @@
 	._font-size-heading(@TYPE-SIZE-Beta);
 }
 
-.story__body {}
+.story__body {
+	._margin-bottom(20);
+}
 
 .story__actions {
 	border-top: 1px solid darken(@COLOR-White, 5);
@@ -34,6 +36,7 @@
 	display:block;
 	position:relative;
 	float:left;
+	border: 1px solid darken(@COLOR-White, 10);
 	._margin-right(20);
 }
 
