Changes to story-ident to ident--story

--- a/content/_partials/story-ident.hbs
+++ b/content/_partials/story-ident.hbs
@@ -1,11 +1,10 @@
 {{#this}}
-<div class="story-ident">
-<a href="#" class="story-ident__avatar-link">
-	<img src="{{content.avatar}}" class="story-ident__avatar" alt="" />
+<div class="ident ident--story">
+<a href="#" class="ident__avatar-link">
+	<img src="{{content.avatar}}" class="ident__avatar" alt="" />
 </a>
-<div class="story-ident__info">
-	<a href="#">{{content.name}}</a> [ACTION] [CITATIONAUTHOR]
-	<time datetime="YYYY-MM-DDThh:mm:ssTZD" class="story-ident__when">[YYYY-MM-DDThh:mm:ssTZD]</time>
+<div class="ident__info"><a href="#" class="ident__author">{{content.name}}</a> [ACTION] [CITATIONAUTHOR]
+	<time datetime="YYYY-MM-DDThh:mm:ssTZD" class="ident__when">[YYYY-MM-DDThh:mm:ssTZD]</time>
 </div>
 </div>
 {{/this}}
