Added Font loading speedup code

--- a/content/_layouts/default.hbs
+++ b/content/_layouts/default.hbs
@@ -1,7 +1,7 @@
 <!doctype html>
-<!--[if IE 8]> <html class="no-js ie ie8 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 9]> <html class="no-js ie ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<!--[if IE 8]> <html class="no-js ie ie8 lt-ie8" lang="en" prefix="og: http://ogp.me/ns#"> <![endif]-->
+<!--[if IE 9]> <html class="no-js ie ie9" lang="en" prefix="og: http://ogp.me/ns#"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en" prefix="og: http://ogp.me/ns#"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
 
