Added in some Simple HTML

--- a/content/Components/wells.hbs
+++ b/content/Components/wells.hbs
@@ -17,7 +17,7 @@ nav-variant: "wells"
 		        </header>
 <!-- writings -->
 		        <div class="article__body rte">
-
+		        {{> well well }}
 		        </div>
 
 <!-- example -->
