--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -59,9 +59,9 @@
 @TYPE-FontSize:                 14;
 @TYPE-LineHeight:               24;
 @TYPE-FontFamily:               'Open Sans', Arial, Helvetica, sans-serif;
-@TYPE-FontColor:                #222;
+@TYPE-FontColor:                #333;
 @TYPE-HeadingsFontFamily:       'Playfair Display', serif;
-@TYPE-HeadingsColor:            #222;
+@TYPE-HeadingsColor:            #333;
 
 @TYPE-SIZE-Omega:               60;
 @TYPE-SIZE-Alpha:               40;
@@ -85,23 +85,17 @@
 // MEDIA QUERIES
 // ----------------------------------------------------
 
-@MQ-Mobile:                     ((767/@TYPE-FontSize)*1em); //Max
-@MQ-TabletMin:                  ((768/@TYPE-FontSize)*1em); //Min
-@MQ-TabletMax:                  ((979/@TYPE-FontSize)*1em); //Max
-@MQ-Desktop:                    ((768/@TYPE-FontSize)*1em); //Min
-@MQ-DesktopOnly:                ((980/@TYPE-FontSize)*1em); //Min
-
-@MQ-Smallest:                 ((339/@TYPE-FontSize)*1em);  // Phone Portrait     = 21.1875
-@MQ-Small-min:                ((340/@TYPE-FontSize)*1em);  //                    = 21.25
-@MQ-Small:                    ((600/@TYPE-FontSize)*1em);  // Tablet Portrait    = 37.5
-@MQ-Medium-min:               ((601/@TYPE-FontSize)*1em);  //                    = 37.5625
-@MQ-Medium:                   ((800/@TYPE-FontSize)*1em);  // Min Tab Landscape  = 50
-@MQ-Large-min:                ((801/@TYPE-FontSize)*1em);  //                    = 50.0625
-@MQ-Large:                    ((980/@TYPE-FontSize)*1em);  // Average PC Monitor = 61.25
-@MQ-Larger-min:               ((981/@TYPE-FontSize)*1em);  //                    = 61.3125
-@MQ-Larger:                   ((1260/@TYPE-FontSize)*1em); // HD TV              = 78.75
-@MQ-Largest-min:              ((1261/@TYPE-FontSize)*1em); //                    = 78.8125
-@MQ-Largest:                  ((1900/@TYPE-FontSize)*1em); // Full HD TV         = 118.75
+@MQ-Smallest:                 ((339/16)*1em);  // Phone Portrait     = 21.1875
+@MQ-Small-min:                ((340/16)*1em);  //                    = 21.25
+@MQ-Small:                    ((600/16)*1em);  // Tablet Portrait    = 37.5
+@MQ-Medium-min:               ((601/16)*1em);  //                    = 37.5625
+@MQ-Medium:                   ((800/16)*1em);  // Min Tab Landscape  = 50
+@MQ-Large-min:                ((801/16)*1em);  //                    = 50.0625
+@MQ-Large:                    ((980/16)*1em);  // Average PC Monitor = 61.25
+@MQ-Larger-min:               ((981/16)*1em);  //                    = 61.3125
+@MQ-Larger:                   ((1260/16)*1em); // HD TV              = 78.75
+@MQ-Largest-min:              ((1261/16)*1em); //                    = 78.8125
+@MQ-Largest:                  ((1900/16)*1em); // Full HD TV         = 118.75
 
 // PATHS
 // ----------------------------------------------------
