Realigning some base HTML and JSON

--- a/content/Components/article.hbs
+++ b/content/Components/article.hbs
@@ -27,7 +27,7 @@ nav-variant: "article"
 
 		            <div class="secton__body">
 				        <!-- code -->
-	        				{{> article article_simple--test }}
+	        				{{> article article }}
 				        <!-- end of code -->
 			        </div>
 
