--- a/content/Components/panels.hbs
+++ b/content/Components/panels.hbs
@@ -29,6 +29,7 @@ nav-variant: "panels"
 		            <div class="secton__body">
 				        <!-- code -->
 				        {{>panel panel}}
+				        {{>panel panel-noactions}}
 				        <!-- end of code -->
 			        </div>
 
