--- a/content/Components/toast.hbs
+++ b/content/Components/toast.hbs
@@ -16,7 +16,7 @@ nav-variant: "toasts"
 		        </header>
 <!-- writings -->
 		        <div class="article__body rte">
-
+		        {{> toast toast}}
 		        </div>
 
 <!-- example -->
