Added simple label

--- a/content/Components/labels.hbs
+++ b/content/Components/labels.hbs
@@ -17,7 +17,6 @@ nav-variant: "labels"
 		        </header>
 <!-- writings -->
 		        <div class="article__body rte">
-
 		        </div>
 
 <!-- example -->
@@ -29,6 +28,7 @@ nav-variant: "labels"
 		            <div class="secton__body">
 				        <!-- code -->
 
+		        		{{> label label }}
 				        <!-- end of code -->
 			        </div>
 
