--- a/content/Components/breadcrumbs.hbs
+++ b/content/Components/breadcrumbs.hbs
@@ -29,6 +29,8 @@ nav-variant: "breadcrumbs"
 		            <div class="secton__body">
 				        <!-- code -->
 
+				        {{> breadcrumbs breadcrumbs }}
+
 				        <!-- end of code -->
 			        </div>
 
