--- a/content/_partials/breadcrumbs__item.hbs
+++ b/content/_partials/breadcrumbs__item.hbs
@@ -3,14 +3,10 @@
 	<li class="list__item">
 		{{#if content.url}}
 			<a href="{{content.url}}" class="list__link" title="{{content.title}}">
-	  		{{#if content.icon}}
-	            <i class="icon icon--{{content.icon}}" aria-hidden="true" role="img"></i>
-	        {{/if}}
+			{{#if content.icon}}{{#each content.icon}}{{>icon}}{{/each}}{{/if}}
 			<span>{{content.text}}</span></a>
 		{{else}}
-	  		{{#if content.icon}}
-	            <i class="icon icon--{{content.icon}}" aria-hidden="true" role="img"></i>
-	        {{/if}}
+			{{#if content.icon}}{{#each content.icon}}{{>icon}}{{/each}}{{/if}}
 			<span>{{content.text}}</span>
 		{{/if}}
 		{{#if content.crumb}}
