--- a/content/_partials/article_footer.hbs
+++ b/content/_partials/article_footer.hbs
@@ -2,9 +2,7 @@
 	<footer class="article__foot">
 		{{#each links}}
 			<a href="{{{link-url}}}" title="{{{link-title}}}" class="button button--full">
-				{{#if "link-icon"}}
-					<i class="icon icon--{{{link-icon}}}"></i>
-				{{/if}}
+        		{{#if content.icon}}{{#each content.icon}}{{#this}}{{>icon}}{{/this}}{{/each}}{{/if}}
 				<span>{{{link-text}}}</span>
 			</a>
 		{{/each}}
